[gd_scene format=3 uid="uid://bip0rcr1drh5r"]

[ext_resource type="Script" uid="uid://c1mos3wn7jcwl" path="res://scripts/tower.gd" id="1_2x682"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7j8ug"]
size = Vector2(52, 94)

[node name="Tower" type="Area2D" unique_id=1993497355]
script = ExtResource("1_2x682")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1480625963]
offset_right = 52.0
offset_bottom = 94.0

[node name="Label" type="Label" parent="ColorRect" unique_id=997685991]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "tower"

[node name="HealthLabel" type="Label" parent="ColorRect" unique_id=743242713]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "100"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1590893988]
position = Vector2(26, 47)
shape = SubResource("RectangleShape2D_7j8ug")

[node name="HealthDecrementTimer" type="Timer" parent="." unique_id=1875889089]
wait_time = 0.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="HealthDecrementTimer" to="." method="_on_health_decrement_timer_timeout"]
